k8s/server-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: server-deployment
spec:
  replicas: 1 # concerns all containers in this file
  selector:
    # match pod labels to create replicas
    matchLabels:
      component: server
  # POD information and its containers section
  template:
    metadata:
      labels:
        component: server # pod labels used for replicas and services
    spec:
      containers:
        - name: server
          image: elie29/server:latest
          resources:
            requests:
              cpu: '200m'
              memory: '64Mi'
            limits:
              cpu: '500m'
              memory: '128Mi'
          ports:
            - containerPort: 5000 # container exposed port
