k8s/server-cluster-ip-service.yml
apiVersion: v1
kind: Service
metadata:
  name: server-cluster-ip-service
spec:
  type: ClusterIP
  selector:
    component: server # pod server selector
  ports:
    - port: 5000 # exposed port for other pods and ingress
      targetPort: 5000 # container port
